Resolve new test code quality issues
Update test file names with more information